--- a/doc/src/documentation/modelling.page
+++ b/doc/src/documentation/modelling.page
@@ -45,7 +45,7 @@ then contain a square iff the corresponding value is assigned to the square.
 Meaning that the first set would contain the squares to which 1 is assigned, the
 second set would contain the squares to which 2 is assigned and so on. The 
 squares could be represented as number ranging from 1 to 81. This view is shown 
-in the "sudoku example with sets":../examples/sudoku-set.html .
+in the {example: {name: sudoku-set, linkText: sudoku example with sets}}.
 
 The point is that there are often multiple ways to view a single problem. Being 
 aware of more than one might help further down the line. Constraints might end 
@@ -64,10 +64,11 @@ bq. The objective is to fill a 9x9 grid ... contains the digits from 1 to 9.
 
 because our choice of view already takes care of that. This illustrates another
 reason for trying to find multiple views, some might cut down on the number of
-constraints that we explicitly have to express. Another example is the "n-queens 
-problem":../examples/n-queens.html where the choice of view takes care of the
-constraint that there may only be one queen per column. We would not have that
-benefit if we for instance would use a nxn matrix of boolean variables.
+constraints that we explicitly have to express. Another example is the 
+{example: {name: n-queens, linkText: n-queens problem}} where the choice of 
+view takes care of the constraint that there may only be one queen per column. 
+We would not have that benefit if we for instance would use a nxn matrix of 
+boolean variables.
 
 We are left with the following constraints that still need to be expressed:
 
@@ -145,11 +146,11 @@ trying them out.
 h4. Breaking symmetries
 
 In many situations several situations symmetries might appear. In the 
-"n-queens example":../example/n-queens.html we have several rotational and 
-reflection symmetries since the chessboard can be e.g. rotated without changing
-whether an assignment is a solution. Nothing is done to counter the symmetries 
-in the example, in total there are only 12 unique solutions, but the example 
-will give us 92 solutions in total.
+{example: {name: n-queens, linkText: n-queens example}} we have several 
+rotational and reflection symmetries since the chessboard can be e.g. rotated 
+without changing whether an assignment is a solution. Nothing is done to counter 
+the symmetries in the example, in total there are only 12 unique solutions, but 
+the example will give us 92 solutions in total.
 
 These symmetries are unnecessary as they add nothing. If we are able to remove
 them then we get a smaller search space, which means that we can find a 
