--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -8,10 +8,10 @@ description: A Ruby interface to Gecode, an open source environment for constrai
 h1. Gecode/R
 
 <div class="summary">
-Gecode/R is a Ruby interface to "Gecode":http://www.gecode.org/, a library for
+<p>Gecode/R is a Ruby interface to "Gecode":http://www.gecode.org/, a library for
 constraint programming. The interface is intended for people with no previous 
 experience of constraint programming, aiming to be easy to pick up and use in 
-practice.
+practice.</p>
 </div>
 
 h2. Design goals
