--- a/doc/src/examples/send-more-money.page
+++ b/doc/src/examples/send-more-money.page
@@ -5,9 +5,9 @@ inMenu: true
 description: An example showing how to solve the send+more=money problem using constraint programming in Ruby with Gecode/R.
 ---
 
-h2. send+more=money
+h1. send+more=money
 
-h3. Definition
+h2. Problem
 
 <pre>
    send
@@ -22,15 +22,15 @@ digits. No two letter may be assigned the same digit and the first letter of a
 word is not allowed to be assigned 0 (i.e. a number may not start with 0 in the 
 equation).
 
-h3. Code
+h2. Code
 
 {includeFile: {filename: ../../../example/send_more_money.rb, escapeHTML: false, processOutput: false, highlight: ruby}}
 
-h3. Output
+h2. Output
 
  s: 9, e: 5, n: 6, d: 7, m: 1, o: 0, r: 8, y: 2
  
-h3. Notes
+h2. Notes
 
 "A more general 
 solution":http://blade.nagaokaut.ac.jp/cgi-bin/scat.rb/ruby/ruby-talk/256221 
