--- a/doc/src/examples/send-most-money.page
+++ b/doc/src/examples/send-most-money.page
@@ -5,9 +5,9 @@ inMenu: true
 description: An example showing how to solve the send+most=money problem using constraint programming in Ruby with Gecode/R.
 ---
 
-h2. send+most=money
+h1. send+most=money
 
-h3. Definition
+h2. Problem
 
 <pre>
    send
@@ -23,11 +23,11 @@ be assigned 0 (i.e. a number may not start with 0 in the equation). There are
 multiple valid assignments, the one which maximizes the value of "money" is 
 sought.
 
-h3. Code
+h2. Code
 
 {includeFile: {filename: ../../../example/send_most_money.rb, escapeHTML: false, processOutput: false, highlight: ruby}}
 
-h3. Output
+h2. Output
 
  s: 3, e: 7, n: 8, d: 2, m: 1, o: 0, s: 9, t: 4, y: 6
  money: 10876
