--- a/doc/src/index.page
+++ b/doc/src/index.page
@@ -6,7 +6,7 @@ description: A Ruby interface to the Gecode constraint programming library.
 template: frontpage.template
 ---
 
-h1. Gecode/R - constraint programming in Ruby
+h1. Constraint programming in Ruby
 
 <div class="summary">
 <p>Gecode/R is a Ruby interface to "Gecode":http://www.gecode.org/, an open 
